# dice-prob

./: .gitignore  CMakeLists.txt  Makefile  dice.c  dice.h  die.c  die.h  main-dice-prob.c  main-dice-roll.c  main.c  roll.c  roll.h
